# Fate-Solana

./: .gitignore  Anchor.toml
programs/fate/: Cargo.toml
programs/fate/src/: lib.rs  pool.rs  pool_registry.rs  user_registry.rs
