[package]
name = "fate"
version = "0.1.0"
description = "Fate prediction market program"
edition = "2021"

[lib]
name = "fate"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",   # <-- this line fixes the Mint / TokenAccount errors
]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1" }

# minimal helpers we use in the embedded Chainlink reader
borsh = "0.10.3"
bytemuck = { version = "1.23.2", features = ["derive"] }
